--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <title>Redux boilerplate</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+    </div>
   </body>
 </html>
